# doc-merger

./: .gitignore  Makefile  README.md  api_server.py  extract.py  pyproject.toml  start_all.sh  start_api.py
my-app/: package-lock.json  package.json  pnpm-lock.yaml
my-app/src/app/: page.tsx
my-app/src/app/components/: DocumentExtractor.tsx  PDFViewer.tsx
