[project]
name = "commission"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docx2txt>=0.9",
    "fastapi>=0.115.12",
    "pdf2image>=1.17.0",
    "pypdf2>=3.0.1",
    "pytesseract>=0.3.13",
    "rarfile>=4.2",
    "requests>=2.32.3",
    "uvicorn>=0.34.3",
]
